[package]
name = "tired_proxy_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
clap = { version = "4.1.8", features = ["derive"] }
hyper = { version = "0.14.24", features = ["full"] }
state = "0.5.3"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std", "fmt", "registry"] }
validator = { version = "0.16.0", features = ["derive"] }
